// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Media /> renders correctly with className 1`] = `
<div>
  <div
    class="media hello-world"
  >
    <div
      class=""
      src="https://player.vimeo.com/video/263419265"
      style="width: 640px; height: 360px;"
    />
  </div>
</div>
`;

exports[`<Media /> renders correctly with config 1`] = `
<div>
  <div
    class="media"
  >
    <div
      class=""
      src="https://player.vimeo.com/video/263419265"
      style="width: 640px; height: 360px;"
    >
      <div
        style="width: 100%; height: 100%; overflow: hidden;"
      />
    </div>
  </div>
</div>
`;

exports[`<Media /> renders correctly with data-testid 1`] = `
<div>
  <div
    class="media"
  >
    <div
      class=""
      data-testid="helloWorld"
      src="https://player.vimeo.com/video/263419265"
      style="width: 640px; height: 360px;"
    >
      <div
        style="width: 100%; height: 100%; overflow: hidden;"
      />
    </div>
  </div>
</div>
`;

exports[`<Media /> renders correctly with default prop 1`] = `
<div>
  <div
    class="media"
  >
    <div
      class=""
    >
      <iframe
        frameborder="0"
        scrolling="no"
        src="https://player.vimeo.com/video/263419265"
        title="media"
      />
    </div>
  </div>
</div>
`;

exports[`<Media /> renders correctly with iframe and responsive 1`] = `
<div>
  <div
    class="media"
  >
    <div
      class="media-player--embed"
      data-testid="helloWorld"
      src="https://ssl.caranddriving.com/cdwebsite/player.aspx?id=8221&cid=autorama&responsive=true"
      style="width: 640px; height: 360px;"
    />
  </div>
</div>
`;

exports[`<Media /> renders youtube player correctly after click on thumb 1`] = `
<div>
  <div
    class="media"
  >
    <div
      class=""
    >
      <iframe
        frameborder="0"
        height="360px"
        scrolling="no"
        src="https://www.youtube.com/embed/hZVXqcKEBmQ"
        title="media"
        width="100%"
      />
    </div>
  </div>
</div>
`;

exports[`<Media /> renders youtube thumb correctly 1`] = `
<div>
  <div
    class="media"
  >
    <div
      class=""
    >
      <div
        class="preview-wrapper"
        role="img"
      >
        <div
          aria-label="Play"
          class="play-btn"
          role="button"
        />
        <div
          class="image -expand"
        >
          <span
            style="box-sizing: border-box; display: block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative;"
          >
            <span
              style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 65% 0px 0px 0px;"
            />
            <img
              class="image--native"
              data-nimg="responsive"
              decoding="async"
              src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
              style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%; object-fit: cover;"
            />
            <noscript />
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
